syntax = "proto3";
package protobuf;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Master{
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
  int32 workerIndex = 1;
}

message RegisterResponse {
  bool ok = 1;
}

